@@ -192,7 +192,7 @@
                     <button id="print"
                             class="button msgHeaderView-button extra-button"
                             label="&button.print;"
-                            onclick="if (event.button == 0) gconversation.print();"/>
+                            onclick="if (event.button == 0) window.print();"/>
                     <button id="archive"
                             class="button msgHeaderView-button hdrArchiveButton"
                             onclick="if (event.button == 0) window.top.MsgArchiveSelectedMessages(null);" label="&archive.label;"/>
