@@ -13,7 +13,7 @@
     <em:targetApplication>
       <Description>
         <em:id>{3550f703-e582-4d05-9a08-453d09bdfdc6}</em:id>
-        <em:minVersion>3.0b4</em:minVersion>
+        <em:minVersion>3.0.1</em:minVersion>
         <em:maxVersion>3.1a1pre</em:maxVersion>
       </Description>
     </em:targetApplication>
